<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="8dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="?attr/actionBarSize"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
...
                            android:lineHeight="18dp"
                            android:lineSpacingExtra="2sp"
                            android:text="@string/card_two_message"
                            android:textColor="@color/kk_main_text"
                            android:textFontWeight="500"
                            android:textSize="13sp"
                            app:layout_constraintBottom_toTopOf="@id/complete_profile_button"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/profile_image"
                            app:layout_constraintTop_toBottomOf="@id/profile_title" />

                        <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:id="@+id/progress_indicator"
...
