<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mprusina.killingk.ui.MainActivity">

    <item
        android:id="@+id/toggle_menu"
        android:orderInCategory="100"
        android:title="@string/toggle_menu_button"
        android:icon="@drawable/baseline_menu_24"
        app:showAsAction="ifRoom"/>

</menu>